--- a/src/Style/Login.css
+++ b/src/Style/Login.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Raleway:ital@1&display=swap');
 body{
-    background-image: url(../img/Login1.png);
+    background-image: url(../img/Login.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
