--- a/src/Style/Formulario.css
+++ b/src/Style/Formulario.css
@@ -23,3 +23,14 @@
     flex-direction: column;
     align-items: center;
 }
+.btnEnviar{
+    margin-top: 20px;
+    width: 80px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    color: #ffda66;
+    background: #8eabdc;
+    cursor: pointer;
+    font-family: 'Cabin', sans-serif;
+}
