--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -96,6 +96,34 @@
     top: 81.50%;
     transform: translate(-50%,-50%);
 }
+.resumos{
+    width: 90%;
+    position: absolute;
+    left: 5%;
+    top: 120px;
+}
+.lista1{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 470px;
+    overflow: auto;
+}
+
+::-webkit-scrollbar {
+    background-color: rgba(0, 0, 0, 0);
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #ffda66;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.btnRelatorios{
+    text-decoration: none;
+    color: #ffda66;
+}
 @media (min-width: 900px) and (max-width: 1300px){
 
     .formulario{
