--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -279,4 +279,17 @@
         top: 83.25%;
         transform: translate(-50%,-50%);
     }
+    .resumos{
+        width: 98%;
+        position: absolute;
+        left: 0.50%;
+        top: 120px;
+    }
+    .lista1{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 400px;
+        overflow: auto;
+    }
 }
