--- a/src/Style/Lista.css
+++ b/src/Style/Lista.css
@@ -8,32 +8,74 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-size: 17px;
+    font-size: 15px;
     font-family: 'Cabin', sans-serif;
     color: #ffda66;
 }
 .codigoAnimal{
     width: 25%;
+    height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    text-align: center;
 }
 .cidade{
     width: 25%;
+    height: 100%;
+    white-space: wrap;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    text-align: center;
 }
 .estado{
     width: 25%;
+    height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    text-align: center;
 }
 .tipoDeCriação{
     width: 25%;
+    height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    text-align: center;
 }
 .dataDoCio{
     width: 25%;
+    height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    text-align: center;
+}
+
+
+@media (max-width: 749px){
+
+    .lista{
+        width: 100%;
+        height: 35px;
+        background-color: rgba(255, 255, 255, 0.455);
+        border-radius: 10px;
+        box-shadow: 1px 1px 10px black;
+        margin-top: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 10px;
+        font-family: 'Cabin', sans-serif;
+        color: #ffda66;
+    }
+
 }
