--- a/src/Style/NavBarLista.css
+++ b/src/Style/NavBarLista.css
@@ -8,7 +8,18 @@
     color: #ffda66;
 }
 .opNavBar{
+    font-size: 15px;
     width: 25%;
     display: flex;
     justify-content: center;
+}
+@media (max-width: 749px){
+
+    .opNavBar{
+        font-size: 12px;
+        width: 25%;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
 }
