--- a/src/Style/Lista.css
+++ b/src/Style/Lista.css
@@ -64,7 +64,8 @@
 @media (max-width: 749px){
 
     .lista{
-        width: 100%;
+        margin-left: 2%;
+        width: 96%;
         height: 35px;
         background-color: rgba(255, 255, 255, 0.455);
         border-radius: 10px;
